changed explore page also implemented delete feature to maintain database effectively